--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "crypto": "^1.0.1",
     "dropbox-v2-api": "^2.4.26",
     "express": "^4.17.1",
-    "fcm-node": "^1.5.2",
+    "fcm-node": "^1.6.1",
     "html-pdf": "^2.1.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
@@ -36,22 +36,25 @@
     "mysqldump": "^3.2.0",
     "node-gcm": "^1.0.2",
     "node-schedule": "^1.3.2",
-    "nodemailer": "^6.3.1",
+    "nodemailer": "^6.6.1",
     "phantomjs": "^2.1.7",
     "phantomjs-prebuilt": "^2.1.13",
-    "socket.io": "^2.3.0",
+    "socket.io": "^2.4.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.0"
   },
   "devDependencies": {
-    "grunt": "^1.0.4",
+    "grunt": "^1.4.1",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-bower-install": "^0.7.0",
+    "grunt-bower-task": "^0.5.0",
     "grunt-concurrent": "^3.0.0",
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-coffee": "^2.1.0",
     "grunt-contrib-compass": "^1.1.1",
+    "grunt-contrib-compress": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^3.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-htmlmin": "^3.1.0",
@@ -61,6 +64,7 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-express-server": "^0.5.4",
     "grunt-google-cdn": "^0.4.3",
+    "grunt-html2js": "^0.8.0",
     "grunt-include-source": "^1.1.0",
     "grunt-karma": "^3.0.2",
     "grunt-newer": "^1.3.0",
